cmake_minimum_required (VERSION 2.6)
# project (Tutorial)
add_definitions(-g -Wall)
add_executable(builder.out builder1.cc)
add_executable(factory_method.out factory_method.cpp)
set_property (TARGET builder.out PROPERTY CXX_STANDARD 11)
set_property (TARGET factory_method.out PROPERTY CXX_STANDARD 11)
