cmake_minimum_required (VERSION 2.6)
# project (Tutorial)
add_definitions(-g -Wall)
add_executable(adapter.out adapter.cpp)
add_executable(bridge.out bridge.cpp)
add_executable(composite.out composite.cpp)
add_executable(decorator.out decorator.cpp)
add_executable(facade.out facade.cpp)

set_property (TARGET adapter.out PROPERTY CXX_STANDARD 11)
set_property (TARGET bridge.out PROPERTY CXX_STANDARD 11)
set_property (TARGET composite.out PROPERTY CXX_STANDARD 11)
set_property (TARGET decorator.out PROPERTY CXX_STANDARD 11)
set_property (TARGET facade.out PROPERTY CXX_STANDARD 11)
